--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <script src="./libs/moment.js"></script>
     <script src="./libs/angular-route.min.js"></script>
     <script src="./libs/underscore.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.4/numeral.min.js"></script>
 
     <script src="./libs/d3.v3.min.js"></script>
 
@@ -24,7 +25,7 @@
         <a href="#/menu">Menu</a>
         <div class="my-order">
             Total Items: {{ totalItems }}<br>
-            Total Price: {{ totalPrice }}<br>
+            Total Price: {{ displayPrice(totalPrice / 100) }}<br>
             <a href="#/order">view order</a>
         </div>
     </div>
