--- a/client/index.html
+++ b/client/index.html
@@ -21,8 +21,8 @@
 <body ng-app="bellaNapoliApp" ng-controller="mainCtrl">
 
     <div id="header-bar">
-        <a href="#/">Home</a>
-        <a href="#/menu">Menu</a>
+        <a href="#/" class="nav-links">Home</a>
+        <a href="#/menu" class="nav-links">Menu</a>
         <div class="my-order">
             Total Items: {{ totalItems }}<br>
             Total Price: {{ displayPrice(totalPrice / 100) }}<br>
