--- a/client/index.html
+++ b/client/index.html
@@ -4,16 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  	<link href='./style/main.css' rel='stylesheet' type='text/css'>
+  	<link href='../style/main.css' rel='stylesheet' type='text/css'>
 
-    <script src="./libs/angular.min.js"></script>
-    <script src="./libs/numeral.min.js"></script>
-    <script src="./libs/moment.js"></script>
-    <script src="./libs/angular-route.min.js"></script>
-    <script src="./libs/underscore.js"></script>
+    <script src="../libs/angular.min.js"></script>
+    <script src="../libs/numeral.min.js"></script>
+    <script src="../libs/moment.js"></script>
+    <script src="../libs/angular-route.min.js"></script>
+    <script src="../libs/underscore.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.4/numeral.min.js"></script>
 
-    <script src="./libs/d3.v3.min.js"></script>
+    <script src="../libs/d3.v3.min.js"></script>
 
     <title>Bella Napoli</title>
 
