--- a/Maverick/index.html
+++ b/Maverick/index.html
@@ -55,15 +55,15 @@
 	<div class="cd-projects-container">
 		<ul class="cd-projects-previews">
 			<li>
-				<a href="#0" onclick="goToAbout()"><div class="cd-project-title"><h2>2<br>Pownall<br>Road</h2></div></a>
+				<a href="#0" onclick="goToAbout()"><div class="cd-project-title"><img src="./img/POWN.svg" width="70%"></div></a>
 			</li>
 
 			<li>
-				<a href="#0" onclick="goToBlog()"><div class="cd-project-title"><h2>420<br>Woodbridge<br>Road</h2></div></a>
+				<a href="#0" onclick="goToBlog()"><div class="cd-project-title"><img src="./img/WOOD.svg" width="70%" ></div></a>
 			</li>
 			
 			<li>
-				<a href="#0" onclick="goToWork()"><div class="cd-project-title"><h2>21-23<br>Queen<br>Street</h2></div></a>
+				<a href="#0" onclick="goToWork()"><div class="cd-project-title"><img src="./img/QUEEN.svg" width="70%"></div></a>
 			</li>
 			
 			
