--- a/Maverick/index.html
+++ b/Maverick/index.html
@@ -55,15 +55,15 @@
 	<div class="cd-projects-container">
 		<ul class="cd-projects-previews">
 			<li>
-				<a href="#0" onclick="goToAbout()"><div class="cd-project-title"><img src="./img/POWN.svg" width="70%"></div></a>
+				<a href="#0" onclick="goToAbout()"><div class="cd-project-title"><h2> Pownall Road</div></a>
 			</li>
 
 			<li>
-				<a href="#0" onclick="goToBlog()"><div class="cd-project-title"><img src="./img/WOOD.svg" width="70%" ></div></a>
+				<a href="#0" onclick="goToBlog()"><div class="cd-project-title"><h2  >Woodbridge Road</div></a>
 			</li>
 			
 			<li>
-				<a href="#0" onclick="goToWork()"><div class="cd-project-title"><img src="./img/QUEEN.svg" width="70%"></div></a>
+				<a href="#0" onclick="goToWork()"><div class="cd-project-title"><h2 >Queens Street</div></a>
 			</li>
 			
 			
