--- a/Maverick/index.html
+++ b/Maverick/index.html
@@ -349,7 +349,7 @@ Juno - <a>A Piece Of Mind</a>
 		console.log("we are on the about page");
 
 		$("#heading-title").addClass("turquoise");
-		$("#hamburger").css("background-color", "#86af48");
+		$("#hamburger").css("background-color", "#169c78");
 		$("#map-container").css("display", "visible");
 	}
 
