--- a/Maverick/pages/work.html
+++ b/Maverick/pages/work.html
@@ -1,104 +1,26 @@
+<style>
+body{background-color: #ffffff;}
+</style>
+
 <div class="preview-image">
 	<div class="cd-project-title">
-		<h2>Bella Napoli</h2><br><br>
+<br><br>
 	</div> 
 </div>
-
-<div class="cd-project-info">
-
-	<center>
-	<img src="./img/mm2.png" width="10%"><br><br>
-	</center><br><br>
-
-	<p>While completing Ba3 I continued running my company, this page displays all the work I completed for clients since the beginning of this module. To see the new 2017 website launched 05/01/2017, to see my Full Web Design Portfolio and to read the history of Maverick media please <a href="http://www.maverickmedia.org.uk/" target="_blank">Click Here!</a></p><br><p class="italic">*Please note design for clients is a lengthy process for the purpose of this page mainly final outcomes are displayed.<br><br></i>
-
-<center>
-<img src="./img/photo.png" width="50%">
-
-<br><br><br><br>
-
-<center>
-	<img src="./img/vlogo.png" width="20%">
-	</center>
-
-	<p>A customer since December, they needed a basic webpage online which displayed their menu which I hope to redesign. Very simple webpage, slider at the top, images of menus bellow, with a fixed header. To visit page please <a href="http://valentinoltd.com" target="_blank">Click Here!</a></p><br><br><br><br>
+</div>
 
 
+<div class="cd-project-info"><h2 class="title-pown"><br>Pownall Road<br>01473 288916<br><br>
+					<p>*Please assure you are booking with the correct restaurant by checking the map at the bottom of this page.<br> If not please go back to the home page and select the correct restaurant. 
+						<p>*10% off for students, NHS and for everyone every Sunday. 
+						<p>*No delivery eat in or takeaway only. </p><br><br>
+		<center>
+						
+<img width="95%" src="./img/MenuWindow.jpg"> 
 
-
-	<center><br><br><br><br>
-	<img src="./img/sancutary_logo.svg" width="20%">
-	</center><br><br><br><br>
-
-	<p>This was a new client of mine which opened in September 2016. The Sanctuary is a restaurant in Ipswich which needed menus, marketing equipment and a logo. In the future I intend to make a website for this company.</p><br><br>
-
-<br><br>
-<br><br>
-<img src="./img/sanc1.jpg" width="15%">&nbsp;&nbsp;
-<img src="./img/sanc2.jpg" width="15%">&nbsp;&nbsp;
-<img src="./img/sanc3.jpg" width="15%">&nbsp;&nbsp;
-<img src="./img/sanc4.jpg" width="15%">&nbsp;&nbsp;<br><br><br><br>
-
-	
-
-<br><br><br><br>
-
-<p>We decided to create a gift card to try and drive repeat business. This idea is similar to what most coffee shops use. If you buy 6 times you get a free coffee. However this is an idea closer to the Nando's tactic. After eating 3 times you get half a chicken free and on the 6th you get a whole chicken free. We used this idea but as a whole meal. The business will not lose money because after 6 times they have already made enough money from this customer to afford this. The main tactic is that people do not tend to eat out alone so they will bring more pople with them spreading the loss across the bill. The paper used is 300gsm dark eco card.</p><br><br><br><br>
-<img src="./img/gift2.jpg" width="25%">&nbsp;&nbsp;
-<img src="./img/gift1.jpg" width="25%">&nbsp;&nbsp;
-
-<br><br><br><br>
-<p>The menus are printed on the same 300gsm dark eco card a4. This is a popular style among many restaurants right now. The reason this paper worked well with this brand is because the food, the environment and ethos are healthy and environmentally conscious.</p><br><br><br><br>
-<br><br><br><br>
-<img src="./img/menu2.png "width  ="40%">&nbsp;&nbsp;
-<img src="./img/menu1.png " width ="40%"><br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-
-
-	<center>
-	<img src="./img/logonew.png" width ="20%"><br><br><br><br>
-	</center>
-
-	<p>Bella Napoli is an Italian restaurant. They opened their 3rd store in December 2016 subsequently needed menus, posters, flyers and a rebranding of there logo. In the New Year they are looking to update their website. Bellow is an A2 menu for the window. Inside and outside of flyers and a drinks and deserts menu which stands on the table.</p><br><br>
-<img src="./img/MenuWindow.jpg" width ="40%"><br><br><br><br>
-<img src="./img/bellaoutside.jpg "width ="40%"><br><br><br><br>
-<img src="./img/bellainside.jpg " width ="40%"><br><br><br><br>
-<img src="./img/zbella.jpg" width ="40%">
-	<center><br><br><br><br>
-	<img src="./img/logo.png"  width ="20%">
-	</center>
-
-	<p>Shock Market is a digital, freemium stock market built to teach people how to use the stock market. So how Zygna Poker is to casino poker, Shock Market is to the Stock Market. Co-Developed with Maverick Media's Sister company Kappisan Games we hope to be online by Spring 2017.</p><br><br>
-
-<br><br><br><br><br><br><br><br>
-
-<img src="./img/logo82.png" width ="10%">
-<br><br><br><br><br><br><br><br>
-
-
-<p>Artizan has been a customer of mine for almost a year, they specialize in fine dining and patisserie and needed a 2017 menu printed on their signature gold card with chocolate text. This has been a style we have used since March 2016, to see their website which I recently updated you can find it at: <a href="http://www.artizankitchen.co.uk/" target="_blank">Click Here!</a></p><br><br><br><br></p>
-
-
-
-<br><br><br><br><br><br><br><br>
-	<img src="./img/2017ARTIZAN.jpg" width ="40%">
-<br><br><br><br><br><br><br><br>
-
-
-
-<img src="./img/LOGOWHITE.png" width="40%">
-<br><br><br><br><br><br><br><br>
-<p>A personal trainer approached me in December asking for a website, this is currently being built. However he needed a logo as well, here it is: 
-
-<br><br><br><br><br><br><br><br>
-
-<center>
-<img src="https://scontent-lht6-1.xx.fbcdn.net/v/t31.0-8/14590036_970338333095709_2583604111141422724_o.jpg?oh=86f7f75532b70fde7c73942588a5c308&oe=58DB7FA0
-" width="50%">
-
-<br><br><br><br><br><br><br><br>
-
-<p>When struggling to find ideas for briefs I either play guitar or paint to focus on something else creative until the right ideas appear, this is a painting I did before i came up with Forage: 
+				
+</div>
+<br><br>	<center>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2453.276788771364!2d1.1504919156991646!3d52.0564835797291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d9a02ce25863b9%3A0x51eb80b62732e725!2sBella+Napoli+3!5e0!3m2!1sen!2suk!4v1485185123297" width="80%" height="700px" frameborder="0" style="border:0" allowfullscreen></iframe><br><br><br><br> 
 
 </div>
