--- a/Maverick/index.html
+++ b/Maverick/index.html
@@ -69,7 +69,7 @@
 
 
 
-<img src="./img/bella1266653.jpg" class="bellaright">
+<a  onclick="changeZed()"><img src="./img/bella1266653.jpg" id="bellaright"></a>
 
 <img src="./img/bella12553.jpg" class="bellacenter">
 
@@ -294,6 +294,13 @@ Italian ambiance.<br><br>
 		$("#heading-title").removeClass().addClass("title-banner");
 		$("#hamburger").css("background-color", "#222");
 		window.scrollTo(0, 0);
+	} 
+
+
+		function changeZed () {
+		$("#bellaright" "#bellaright:hover").removeClass().addClass("remove-zed");
+		$("#hamburger").css("background-color", "#222");
+		
 	} 
 
 	/* ANGULAR */
