--- a/Maverick/index.html
+++ b/Maverick/index.html
@@ -298,9 +298,8 @@ Italian ambiance.<br><br>
 
 
 		function changeZed () {
-		$("#bellaright" "#bellaright:hover").removeClass().addClass("remove-zed");
-		$("#hamburger").css("background-color", "#222");
-		
+		$("#bellaright").show()
+$("#bellaright").hide()
 	} 
 
 	/* ANGULAR */
